<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2024 Authors, Flipkart Internet Pvt. Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ranger</artifactId>
        <groupId>io.appform.ranger</groupId>
        <version>1.1-RC2</version>
    </parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>ranger-hub-server-bundle</artifactId>

  <dependencies>
    <dependency>
      <groupId>io.appform.ranger</groupId>
      <artifactId>ranger-http-client</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.appform.ranger</groupId>
      <artifactId>ranger-zk-client</artifactId>
      <version>${project.version}</version>
    </dependency>
      <dependency>
      <groupId>io.appform.ranger</groupId>
      <artifactId>ranger-drove-client</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.appform.ranger</groupId>
      <artifactId>ranger-server-bundle</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.appform.ranger</groupId>
      <artifactId>ranger-server-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.dropwizard</groupId>
      <artifactId>dropwizard-core</artifactId>
      <version>${dropwizard.version}</version>
      <scope>provided</scope>
    </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>${mockito.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.wiremock</groupId>
          <artifactId>wiremock-standalone</artifactId>
          <version>${wiremock.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>io.dropwizard</groupId>
          <artifactId>dropwizard-testing</artifactId>
          <scope>test</scope>
          <exclusions>
              <exclusion>
                  <groupId>junit</groupId>
                  <artifactId>junit</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
  </dependencies>

</project>